corrected overflow-x and button position on first segment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,8 @@
     margin-bottom: 0.1%;
     background-color: gold;
     max-width: 100%;
+    direction: rtl;
+    overflow-x: hidden;
  }
 
 p, span, h1, h2, h3, h4, h5, h6, tr, td
@@ -167,6 +169,7 @@ iframe
 .Fondu0Vers1
 {
     background: linear-gradient(to bottom, Black, #292a2b);
+    direction: initial;
     height: 100vh;
 }
 
